--- a/application_bureau_yasmine_linda_hatim_sofiane/App.xaml
+++ b/application_bureau_yasmine_linda_hatim_sofiane/App.xaml
@@ -4,6 +4,151 @@
              xmlns:local="clr-namespace:application_bureau_yasmine_linda_hatim_sofiane"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="titleText" TargetType = "TextBlock">
+            <Setter Property="FontSize" Value = "36"/>
+            <Setter Property="FontWeight" Value = "Bold"/>
+            <Setter Property="TextAlignment" Value = "Center"/>
+            <Setter Property="Foreground" Value = "#ffffff"/>
+        </Style>
+
+        <Style x:Key="normalText" TargetType = "TextBlock">
+            <Setter Property="FontSize" Value = "16"/>
+            <Setter Property="LineHeight"  Value = "28"/>
+            <Setter Property="TextWrapping" Value = "Wrap"/>
+            <Setter Property="TextAlignment" Value = "Center"/>
+            <Setter Property="Foreground" Value = "#ffffff"/>
+        </Style>
+
+        <Style x:Key="button" TargetType = "Button">
+            <Setter Property="FontSize" Value = "14"/>
+            <Setter Property="Width"  Value = "170"/>
+            <Setter Property="Background" Value = "Transparent"/>
+            <Setter Property="Foreground" Value = "#fdfefe"/>
+            <Setter Property="FocusVisualStyle" Value = "{x:Null}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="25" BorderThickness="1" BorderBrush="White" Padding="15">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#e8e8e8"/>
+                    <Setter Property="Foreground" Value="DimGray"/>
+                </Trigger>
+                <Trigger Property="IsMouseCaptured" Value="True">
+                    <Setter Property="Background" Value="#d9d9d9"/>
+                    <Setter Property="Foreground" Value="DimGray"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="buttonCircle" TargetType="Button">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="Margin" Value="8 0 "/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="30" BorderThickness="1" BorderBrush="#878787" Padding="15">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Background" Value="#d9d9d9"/>
+                </Trigger>
+                <Trigger Property="IsMouseCaptured" Value="False">
+                    <Setter Property="Background" Value="#c4c4c4"/>
+                </Trigger>
+
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="lbl" TargetType="Label">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Grid.Column" Value="1" />
+            <Setter Property="Panel.ZIndex" Value="1" />
+            <Setter Property="Margin" Value="10 0 0 0" />
+            <Setter Property="Foreground" Value="#acb0af" />
+
+        </Style>
+
+
+        <Style x:Key="textBox" TargetType="TextBox">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Grid.Column" Value="1" />
+            <Setter Property="Margin" Value="10 0 0 0" />
+            <Setter Property="BorderBrush" Value="#acb0af" />
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+
+        </Style>
+        <Style x:Key="PasswordBox" TargetType="PasswordBox">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Grid.Column" Value="1" />
+            <Setter Property="Margin" Value="10 0 0 0" />
+            <Setter Property="BorderBrush" Value="#acb0af" />
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+
+        </Style>
+
+        <Style x:Key="mainbutton" TargetType = "Button">
+            <Setter Property="FontSize" Value = "14"/>
+            <Setter Property="Width"  Value = "200"/>
+            <Setter Property="Margin"  Value = "0 20 0 0"/>
+            <Setter Property="Background" Value = "#3ab19b"/>
+            <Setter Property="Foreground" Value = "#fdfefe"/>
+            <Setter Property="FocusVisualStyle" Value = "{x:Null}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" CornerRadius="25" BorderThickness="1" BorderBrush="#49B7A3" Padding="15">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#339685"/>
+                    <Setter Property="Foreground" Value="DimGray"/>
+                </Trigger>
+                <Trigger Property="IsMouseCaptured" Value="True">
+                    <Setter Property="Background" Value="#d9d9d9"/>
+                    <Setter Property="Foreground" Value="white"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+
+        <Style TargetType="Button" x:Key="MenuButtonTheme">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"
+                     Background="{TemplateBinding Background}">
+                            <TextBlock Text="{TemplateBinding Content}" 
+                              VerticalAlignment="Center" 
+                              Margin="50,0,0,0" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Style.Triggers>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="#339685"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
